remove extra cell

--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -3040,195 +3040,139 @@
     {
       "cell_type": "code",
       "source": [
-        "# Install the diffusers library\n",
-        "!pip install diffusers\n",
-        "\n",
         "import os\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "from torch.utils.data import DataLoader, Dataset\n",
         "from torchvision import transforms\n",
-        "import numpy as np\n",
         "from tqdm import tqdm\n",
-        "from google.colab import drive\n",
-        "from diffusers import UNet2DModel, DDPMScheduler\n",
+        "import numpy as np\n",
         "\n",
-        "# Mount Google Drive\n",
-        "drive.mount('/content/drive')\n",
+        "class AlzheimersDataset(Dataset):\n",
+        "    def __init__(self, images, labels, transform=None):\n",
+        "        # Convert to tensor using numpy to avoid OOM issues\n",
+        "        self.images = torch.from_numpy(np.array(images)).float()\n",
+        "        self.labels = torch.from_numpy(np.array(labels)).long()\n",
+        "        self.transform = transform\n",
         "\n",
-        "# Define a directory in Google Drive to save checkpoints\n",
-        "checkpoint_dir = \"/content/drive/My Drive/checkpoints\"  # Change this to your desired folder\n",
-        "os.makedirs(checkpoint_dir, exist_ok=True)\n",
+        "    def __len__(self):\n",
+        "        return len(self.labels)\n",
         "\n",
-        "# Combine original and augmented data\n",
-        "all_images = list(dataset['image']) + augmented_images  # Replace 'image' with the correct key\n",
-        "all_labels = list(dataset['label']) + augmented_labels  # Replace 'label' with the correct key\n",
+        "    def __getitem__(self, idx):\n",
+        "        image = self.images[idx]\n",
+        "        label = self.labels[idx]\n",
         "\n",
-        "# Normalize and convert to tensors\n",
-        "transform = transforms.Compose([\n",
-        "    transforms.ToTensor(),  # Convert to tensor\n",
-        "    transforms.Normalize((0.5,), (0.5,))  # Normalize to [-1, 1]\n",
-        "])\n",
+        "        if self.transform:\n",
+        "            image = self.transform(image)\n",
         "\n",
-        "# Convert images and labels to PyTorch tensors\n",
-        "images = [transform(image) for image in all_images]\n",
-        "images = torch.stack(images)\n",
-        "labels = torch.tensor(all_labels, dtype=torch.long)\n",
+        "        return image, label\n",
         "\n",
-        "# Create a PyTorch dataset and dataloader\n",
-        "combined_dataset = TensorDataset(images, labels)\n",
-        "dataloader = DataLoader(combined_dataset, batch_size=32, shuffle=True)\n",
+        "# More efficient model architecture\n",
+        "class EfficientClassifier(nn.Module):\n",
+        "    def __init__(self, num_classes=4):\n",
+        "        super(EfficientClassifier, self).__init__()\n",
+        "        self.features = nn.Sequential(\n",
+        "            nn.Conv2d(1, 32, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.BatchNorm2d(32),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
         "\n",
-        "# Define the UNet model using the diffusers library\n",
-        "unet = UNet2DModel(\n",
-        "    sample_size=128,  # Adjust based on your image size\n",
-        "    in_channels=1,    # Grayscale images\n",
-        "    out_channels=1,   # Grayscale images\n",
-        "    layers_per_block=2,\n",
-        "    block_out_channels=(64, 128, 256, 512),\n",
-        "    down_block_types=(\n",
-        "        \"DownBlock2D\",\n",
-        "        \"DownBlock2D\",\n",
-        "        \"DownBlock2D\",\n",
-        "        \"DownBlock2D\",\n",
-        "    ),\n",
-        "    up_block_types=(\n",
-        "        \"UpBlock2D\",\n",
-        "        \"UpBlock2D\",\n",
-        "        \"UpBlock2D\",\n",
-        "        \"UpBlock2D\",\n",
-        "    ),\n",
-        ")\n",
+        "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.BatchNorm2d(64),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
         "\n",
-        "# Define the classifier\n",
-        "class Classifier(nn.Module):\n",
-        "    def __init__(self, input_dim, num_classes):\n",
-        "        super(Classifier, self).__init__()\n",
-        "        self.fc = nn.Sequential(\n",
-        "            nn.Linear(input_dim, 512),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Linear(512, num_classes),\n",
+        "            nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.BatchNorm2d(128),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "        )\n",
+        "\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Linear(128 * 16 * 16, 512),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(512, 256),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.3),\n",
+        "            nn.Linear(256, num_classes)\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.fc(x)\n",
+        "        x = self.features(x)\n",
+        "        x = x.view(x.size(0), -1)\n",
+        "        x = self.classifier(x)\n",
+        "        return x\n",
         "\n",
-        "# Combine UNet and classifier\n",
-        "class DiffusionClassifier(nn.Module):\n",
-        "    def __init__(self, unet, classifier):\n",
-        "        super(DiffusionClassifier, self).__init__()\n",
-        "        self.unet = unet\n",
-        "        self.classifier = classifier\n",
+        "def train_model(images, labels, num_epochs=20, batch_size=32, learning_rate=0.001):\n",
+        "    # Preprocessing\n",
+        "    transform = transforms.Compose([\n",
+        "        transforms.ToPILImage(),\n",
+        "        transforms.Resize((128, 128)),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize(mean=[0.5], std=[0.5])\n",
+        "    ])\n",
         "\n",
-        "    def forward(self, x):\n",
-        "        # Extract features using UNet\n",
-        "        features = self.unet(x, timestep=0).sample  # Use timestep=0 for feature extraction\n",
-        "        features = features.view(features.size(0), -1)  # Flatten features\n",
-        "        return self.classifier(features)\n",
+        "    # Create dataset and dataloader\n",
+        "    dataset = AlzheimersDataset(images, labels, transform=transform)\n",
+        "    dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, pin_memory=True)\n",
         "\n",
-        "# Initialize models\n",
-        "classifier = Classifier(input_dim=512 * 8 * 8, num_classes=4)  # Adjust input_dim based on UNet output\n",
-        "model = DiffusionClassifier(unet, classifier)\n",
+        "    # Model, loss, and optimizer\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    model = EfficientClassifier().to(device)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate, weight_decay=1e-5)\n",
         "\n",
-        "# Define loss and optimizer\n",
-        "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "    # Learning rate scheduler\n",
+        "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience=3, factor=0.1)\n",
         "\n",
-        "# Function to save a checkpoint\n",
-        "def save_checkpoint(epoch, model, optimizer, loss, checkpoint_dir):\n",
-        "    checkpoint_path = os.path.join(checkpoint_dir, f\"checkpoint_epoch_{epoch}.pth\")\n",
-        "    torch.save({\n",
-        "        'epoch': epoch,\n",
-        "        'model_state_dict': model.state_dict(),\n",
-        "        'optimizer_state_dict': optimizer.state_dict(),\n",
-        "        'loss': loss,\n",
-        "    }, checkpoint_path)\n",
-        "    print(f\"Checkpoint saved at {checkpoint_path}\")\n",
+        "    # Training loop\n",
+        "    for epoch in range(num_epochs):\n",
+        "        model.train()\n",
+        "        total_loss = 0\n",
         "\n",
-        "# Function to load a checkpoint\n",
-        "def load_checkpoint(checkpoint_path, model, optimizer):\n",
-        "    checkpoint = torch.load(checkpoint_path)\n",
-        "    model.load_state_dict(checkpoint['model_state_dict'])\n",
-        "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-        "    epoch = checkpoint['epoch']\n",
-        "    loss = checkpoint['loss']\n",
-        "    print(f\"Checkpoint loaded from {checkpoint_path} (epoch {epoch}, loss {loss})\")\n",
-        "    return epoch\n",
+        "        for batch_images, batch_labels in tqdm(dataloader, desc=f'Epoch {epoch+1}/{num_epochs}'):\n",
+        "            batch_images, batch_labels = batch_images.to(device), batch_labels.to(device)\n",
         "\n",
-        "# Training loop\n",
-        "num_epochs = 10\n",
-        "start_epoch = 0\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(batch_images)\n",
+        "            loss = criterion(outputs, batch_labels)\n",
         "\n",
-        "# Load the latest checkpoint if available\n",
-        "checkpoint_files = [f for f in os.listdir(checkpoint_dir) if f.startswith(\"checkpoint_epoch_\")]\n",
-        "if checkpoint_files:\n",
-        "    latest_checkpoint = max(checkpoint_files, key=lambda x: int(x.split(\"_\")[2].split(\".\")[0]))\n",
-        "    latest_checkpoint_path = os.path.join(checkpoint_dir, latest_checkpoint)\n",
-        "    start_epoch = load_checkpoint(latest_checkpoint_path, model, optimizer) + 1\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
         "\n",
-        "for epoch in range(start_epoch, num_epochs):\n",
-        "    model.train()\n",
-        "    running_loss = 0.0\n",
-        "    for images, labels in tqdm(dataloader):\n",
-        "        # Forward pass\n",
-        "        outputs = model(images)\n",
-        "        loss = criterion(outputs, labels)\n",
+        "            total_loss += loss.item()\n",
         "\n",
-        "        # Backward pass and optimization\n",
-        "        optimizer.zero_grad()\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
+        "        avg_loss = total_loss / len(dataloader)\n",
+        "        scheduler.step(avg_loss)\n",
         "\n",
-        "        running_loss += loss.item()\n",
+        "        print(f'Epoch {epoch+1}: Average Loss = {avg_loss:.4f}')\n",
         "\n",
-        "    # Save checkpoint after each epoch\n",
-        "    save_checkpoint(epoch, model, optimizer, running_loss / len(dataloader), checkpoint_dir)\n",
+        "    return model\n",
         "\n",
-        "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(dataloader):.4f}\")\n",
-        "\n",
-        "print(\"Training complete!\")"
+        "# Usage would look like:\n",
+        "model = train_model(all_images, all_labels)"
       ],
       "metadata": {
-        "id": "gsWfQF_I3VET",
-        "outputId": "9cd00383-f2d0-43f9-e6b0-67978ac0dc8d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        },
+        "id": "gsWfQF_I3VET",
+        "outputId": "393a563c-b7ed-4d33-d65e-6bec2405ba23"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: diffusers in /usr/local/lib/python3.11/dist-packages (0.32.1)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.11/dist-packages (from diffusers) (8.5.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from diffusers) (3.16.1)\n",
-            "Requirement already satisfied: huggingface-hub>=0.23.2 in /usr/local/lib/python3.11/dist-packages (from diffusers) (0.27.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from diffusers) (1.26.4)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.11/dist-packages (from diffusers) (2024.11.6)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from diffusers) (2.32.3)\n",
-            "Requirement already satisfied: safetensors>=0.3.1 in /usr/local/lib/python3.11/dist-packages (from diffusers) (0.5.2)\n",
-            "Requirement already satisfied: Pillow in /usr/local/lib/python3.11/dist-packages (from diffusers) (11.1.0)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.23.2->diffusers) (2024.9.0)\n",
-            "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.23.2->diffusers) (24.2)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.23.2->diffusers) (6.0.2)\n",
-            "Requirement already satisfied: tqdm>=4.42.1 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.23.2->diffusers) (4.67.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.23.2->diffusers) (4.12.2)\n",
-            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.11/dist-packages (from importlib-metadata->diffusers) (3.21.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->diffusers) (3.4.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->diffusers) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->diffusers) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->diffusers) (2024.12.14)\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 0/802 [00:00<?, ?it/s]"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'all_images' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-5c9b8f814d2d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;31m# Usage would look like:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'all_images' is not defined"
           ]
         }
       ]
