update the code and fix the error

--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -849,7 +849,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 625
         },
         "id": "5-cBopVzRcjM",
         "outputId": "fc9533a0-53ee-4875-c5cd-a2fbc616fb44"
@@ -910,7 +910,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 776
+          "height": 1000
         },
         "id": "IorQ_2v8SnG7",
         "outputId": "8bbae962-9e5a-42eb-826c-da871ebb1fe9"
@@ -1178,14 +1178,13 @@
         "import numpy as np\n",
         "import torch\n",
         "from PIL import Image\n",
-        "from torchvision import transforms\n",
         "\n",
         "def preprocess_images(images, target_size=(128, 128)):\n",
         "    \"\"\"\n",
-        "    Standardize image sizes and convert to numpy array\n",
+        "    Robust image preprocessing for Alzheimer's dataset\n",
         "\n",
         "    Args:\n",
-        "    - images: List of input images (can be PIL or numpy arrays)\n",
+        "    - images: List or array of input images\n",
         "    - target_size: Desired output image size\n",
         "\n",
         "    Returns:\n",
@@ -1194,35 +1193,41 @@
         "    processed_images = []\n",
         "\n",
         "    for img in images:\n",
-        "        # Convert to PIL Image if not already\n",
-        "        if not isinstance(img, Image.Image):\n",
-        "            img = Image.fromarray(img)\n",
+        "        # Handle different input types\n",
+        "        if isinstance(img, np.ndarray):\n",
+        "            # Squeeze and remove extra dimensions\n",
+        "            while img.ndim > 2:\n",
+        "                img = img.squeeze(axis=-1)\n",
         "\n",
-        "        # Resize and convert to grayscale if needed\n",
-        "        img = img.convert('L')  # Ensure grayscale\n",
+        "            # Convert to PIL if 2D numpy array\n",
+        "            if img.ndim == 2:\n",
+        "                img = Image.fromarray(img.astype(np.uint8))\n",
+        "            else:\n",
+        "                raise ValueError(f\"Unexpected image shape: {img.shape}\")\n",
+        "\n",
+        "        # Ensure PIL Image\n",
+        "        if not isinstance(img, Image.Image):\n",
+        "            img = Image.fromarray(np.array(img))\n",
+        "\n",
+        "        # Resize and convert to grayscale\n",
+        "        img = img.convert('L')\n",
         "        img = img.resize(target_size, Image.LANCZOS)\n",
         "\n",
         "        # Convert to numpy array\n",
-        "        img_array = np.array(img)\n",
+        "        img_array = np.array(img).astype(np.float32)\n",
         "        processed_images.append(img_array)\n",
         "\n",
-        "    # Convert to numpy array with consistent shape\n",
+        "    # Stack images into a single numpy array\n",
         "    return np.stack(processed_images)\n",
         "\n",
-        "# Preprocessing transform\n",
-        "transform = transforms.Compose([\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(mean=[0.5], std=[0.5])\n",
-        "])\n",
-        "\n",
         "# Usage example:\n",
-        "# processed_images = preprocess_images(all_images)\n",
-        "# processed_labels = np.array(all_labels)"
+        "processed_images = preprocess_images(all_images)\n",
+        "processed_labels = np.array(all_labels)"
       ],
       "metadata": {
         "id": "WDS9uckF8VQY"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1345,7 +1350,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 353
+          "height": 335
         },
         "id": "gsWfQF_I3VET",
         "outputId": "f8c761c5-98eb-4dad-a06e-6307b6bd5d1a"
