--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1233,144 +1233,141 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
+        "print(processed_images.shape)\n",
+        "print(processed_labels.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tr7disTE90Mr",
+        "outputId": "76f81d19-51f6-4ba0-f565-3af763ac4f61"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(25661, 128, 128)\n",
+            "(25661,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "from torch.utils.data import DataLoader, Dataset\n",
-        "from torchvision import transforms\n",
-        "from tqdm import tqdm\n",
-        "import numpy as np\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "\n",
-        "class AlzheimersDataset(Dataset):\n",
-        "    def __init__(self, images, labels, transform=None):\n",
-        "        # Convert to tensor using numpy to avoid OOM issues\n",
-        "        self.images = torch.from_numpy(np.array(images)).float()\n",
-        "        self.labels = torch.from_numpy(np.array(labels)).long()\n",
-        "        self.transform = transform\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return len(self.labels)\n",
-        "\n",
-        "    def __getitem__(self, idx):\n",
-        "        image = self.images[idx]\n",
-        "        label = self.labels[idx]\n",
-        "\n",
-        "        if self.transform:\n",
-        "            image = self.transform(image)\n",
-        "\n",
-        "        return image, label\n",
-        "\n",
-        "# More efficient model architecture\n",
-        "class EfficientClassifier(nn.Module):\n",
+        "class AlzheimerClassifier(nn.Module):\n",
         "    def __init__(self, num_classes=4):\n",
-        "        super(EfficientClassifier, self).__init__()\n",
+        "        super().__init__()\n",
         "        self.features = nn.Sequential(\n",
-        "            nn.Conv2d(1, 32, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.Conv2d(1, 32, kernel_size=3, padding=1),\n",
         "            nn.BatchNorm2d(32),\n",
-        "            nn.ReLU(inplace=True),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(2),\n",
         "\n",
-        "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
         "            nn.BatchNorm2d(64),\n",
-        "            nn.ReLU(inplace=True),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(2),\n",
         "\n",
-        "            nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
         "            nn.BatchNorm2d(128),\n",
-        "            nn.ReLU(inplace=True),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(2)\n",
         "        )\n",
         "\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(128 * 16 * 16, 512),\n",
-        "            nn.ReLU(inplace=True),\n",
+        "            nn.ReLU(),\n",
         "            nn.Dropout(0.5),\n",
-        "            nn.Linear(512, 256),\n",
-        "            nn.ReLU(inplace=True),\n",
-        "            nn.Dropout(0.3),\n",
-        "            nn.Linear(256, num_classes)\n",
+        "            nn.Linear(512, num_classes)\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = self.features(x)\n",
+        "        x = self.features(x.unsqueeze(1))\n",
         "        x = x.view(x.size(0), -1)\n",
-        "        x = self.classifier(x)\n",
-        "        return x\n",
+        "        return self.classifier(x)\n",
         "\n",
-        "def train_model(images, labels, num_epochs=20, batch_size=32, learning_rate=0.001):\n",
-        "    # Preprocessing\n",
-        "    transform = transforms.Compose([\n",
-        "        transforms.ToPILImage(),\n",
-        "        transforms.Resize((128, 128)),\n",
-        "        transforms.ToTensor(),\n",
-        "        transforms.Normalize(mean=[0.5], std=[0.5])\n",
-        "    ])\n",
+        "def train_model(processed_images, processed_labels):\n",
+        "    # Split data\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(\n",
+        "        processed_images, processed_labels, test_size=0.2, random_state=42\n",
+        "    )\n",
         "\n",
-        "    # Create dataset and dataloader\n",
-        "    dataset = AlzheimersDataset(images, labels, transform=transform)\n",
-        "    dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, pin_memory=True)\n",
+        "    # Convert to tensors\n",
+        "    X_train = torch.FloatTensor(X_train)\n",
+        "    X_test = torch.FloatTensor(X_test)\n",
+        "    y_train = torch.LongTensor(y_train)\n",
+        "    y_test = torch.LongTensor(y_test)\n",
         "\n",
-        "    # Model, loss, and optimizer\n",
+        "    # Create datasets\n",
+        "    train_dataset = TensorDataset(X_train, y_train)\n",
+        "    test_dataset = TensorDataset(X_test, y_test)\n",
+        "\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "    test_loader = DataLoader(test_dataset, batch_size=32)\n",
+        "\n",
+        "    # Model setup\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "    model = EfficientClassifier().to(device)\n",
+        "    model = AlzheimerClassifier().to(device)\n",
         "    criterion = nn.CrossEntropyLoss()\n",
-        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate, weight_decay=1e-5)\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "    # Learning rate scheduler\n",
-        "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience=3, factor=0.1)\n",
-        "\n",
-        "    # Training loop\n",
-        "    for epoch in range(num_epochs):\n",
-        "        model.train()\n",
+        "    # Training\n",
+        "    model.train()\n",
+        "    for epoch in range(10):\n",
         "        total_loss = 0\n",
-        "\n",
-        "        for batch_images, batch_labels in tqdm(dataloader, desc=f'Epoch {epoch+1}/{num_epochs}'):\n",
-        "            batch_images, batch_labels = batch_images.to(device), batch_labels.to(device)\n",
+        "        for batch_imgs, batch_labels in train_loader:\n",
+        "            batch_imgs, batch_labels = batch_imgs.to(device), batch_labels.to(device)\n",
         "\n",
         "            optimizer.zero_grad()\n",
-        "            outputs = model(batch_images)\n",
+        "            outputs = model(batch_imgs)\n",
         "            loss = criterion(outputs, batch_labels)\n",
-        "\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
         "            total_loss += loss.item()\n",
         "\n",
-        "        avg_loss = total_loss / len(dataloader)\n",
-        "        scheduler.step(avg_loss)\n",
+        "        print(f'Epoch {epoch+1}, Loss: {total_loss/len(train_loader)}')\n",
         "\n",
-        "        print(f'Epoch {epoch+1}: Average Loss = {avg_loss:.4f}')\n",
+        "    # Evaluation\n",
+        "    model.eval()\n",
+        "    predictions, true_labels = [], []\n",
+        "    with torch.no_grad():\n",
+        "        for batch_imgs, batch_labels in test_loader:\n",
+        "            batch_imgs, batch_labels = batch_imgs.to(device), batch_labels.to(device)\n",
+        "            outputs = model(batch_imgs)\n",
+        "            _, predicted = torch.max(outputs, 1)\n",
+        "\n",
+        "            predictions.extend(predicted.cpu().numpy())\n",
+        "            true_labels.extend(batch_labels.cpu().numpy())\n",
+        "\n",
+        "    # Print metrics\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(true_labels, predictions))\n",
+        "\n",
+        "    print(\"\\nConfusion Matrix:\")\n",
+        "    print(confusion_matrix(true_labels, predictions))\n",
         "\n",
         "    return model\n",
         "\n",
-        "# Usage would look like:\n",
-        "model = train_model(all_images, all_labels)"
+        "# Usage\n",
+        "# model = train_model(processed_images, processed_labels)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 335
-        },
-        "id": "gsWfQF_I3VET",
-        "outputId": "f8c761c5-98eb-4dad-a06e-6307b6bd5d1a"
+        "id": "gsWfQF_I3VET"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (25661, 128, 128) + inhomogeneous part.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-5c9b8f814d2d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;31m# Usage would look like:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-10-5c9b8f814d2d>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(images, labels, num_epochs, batch_size, learning_rate)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0;31m# Create dataset and dataloader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAlzheimersDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0mdataloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpin_memory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-10-5c9b8f814d2d>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, images, labels, transform)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;31m# Convert to tensor using numpy to avoid OOM issues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (25661, 128, 128) + inhomogeneous part."
-          ]
-        }
-      ]
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "code",
