added new model

--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -849,7 +849,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 625
+          "height": 606
         },
         "id": "5-cBopVzRcjM",
         "outputId": "fc9533a0-53ee-4875-c5cd-a2fbc616fb44"
@@ -910,7 +910,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 776
         },
         "id": "IorQ_2v8SnG7",
         "outputId": "8bbae962-9e5a-42eb-826c-da871ebb1fe9"
@@ -1361,13 +1361,62 @@
         "    return model\n",
         "\n",
         "# Usage\n",
-        "# model = train_model(processed_images, processed_labels)"
+        "model = train_model(processed_images, processed_labels)"
       ],
       "metadata": {
-        "id": "gsWfQF_I3VET"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gsWfQF_I3VET",
+        "outputId": "3d1436e7-ff61-47b7-8bd2-942be94b69e6"
       },
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1, Loss: 1.6052646711236591\n",
+            "Epoch 2, Loss: 1.2788366985469592\n",
+            "Epoch 3, Loss: 1.2806654975421703\n",
+            "Epoch 4, Loss: 1.2285615077642638\n",
+            "Epoch 5, Loss: 1.1758248031696426\n",
+            "Epoch 6, Loss: 1.145269504310186\n",
+            "Epoch 7, Loss: 1.1328783917278515\n",
+            "Epoch 8, Loss: 1.1271550378695456\n",
+            "Epoch 9, Loss: 1.1181423391137169\n",
+            "Epoch 10, Loss: 1.1125992638671138\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.32      0.02      0.05      1152\n",
+            "           1       0.98      0.93      0.95      1045\n",
+            "           2       0.78      0.54      0.64      1501\n",
+            "           3       0.40      0.83      0.54      1435\n",
+            "\n",
+            "    accuracy                           0.58      5133\n",
+            "   macro avg       0.62      0.58      0.54      5133\n",
+            "weighted avg       0.61      0.58      0.54      5133\n",
+            "\n",
+            "\n",
+            "Confusion Matrix:\n",
+            "[[  28   10    4 1110]\n",
+            " [  43  970    0   32]\n",
+            " [   6    4  813  678]\n",
+            " [  11    6  229 1189]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# other model"
+      ],
+      "metadata": {
+        "id": "npDRo_dC_NO0"
+      }
     },
     {
       "cell_type": "code",
