--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1420,11 +1420,122 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "from google.colab import drive\n",
+        "from diffusers import UNet2DModel\n",
+        "\n",
+        "class DiffusionFeatureExtractor(nn.Module):\n",
+        "    def __init__(self, num_classes=4):\n",
+        "        super().__init__()\n",
+        "        # Initialize UNet as feature extractor\n",
+        "        self.unet = UNet2DModel(\n",
+        "            sample_size=128,\n",
+        "            in_channels=1,\n",
+        "            out_channels=1,\n",
+        "            layers_per_block=2,\n",
+        "            block_out_channels=(64, 128, 256, 512)\n",
+        "        )\n",
+        "\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Linear(512 * 16 * 16, 512),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(512, num_classes)\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Extract features using UNet\n",
+        "        x = x.unsqueeze(1)  # Add channel dimension\n",
+        "        features = self.unet(x, timestep=0).sample\n",
+        "        features = features.view(features.size(0), -1)\n",
+        "        return self.classifier(features)\n",
+        "\n",
+        "def train_and_checkpoint_model(processed_images, processed_labels):\n",
+        "    # Mount Google Drive\n",
+        "    drive.mount('/content/drive')\n",
+        "    checkpoint_dir = \"/content/drive/My Drive/alzheimers_checkpoints\"\n",
+        "    os.makedirs(checkpoint_dir, exist_ok=True)\n",
+        "\n",
+        "    # Data preparation\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(\n",
+        "        processed_images, processed_labels, test_size=0.2, random_state=42\n",
+        "    )\n",
+        "\n",
+        "    # Convert to tensors\n",
+        "    X_train = torch.FloatTensor(X_train)\n",
+        "    X_test = torch.FloatTensor(X_test)\n",
+        "    y_train = torch.LongTensor(y_train)\n",
+        "    y_test = torch.LongTensor(y_test)\n",
+        "\n",
+        "    # Create datasets\n",
+        "    train_dataset = TensorDataset(X_train, y_train)\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "\n",
+        "    # Model setup\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    model = DiffusionFeatureExtractor().to(device)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "    # Training with checkpointing\n",
+        "    for epoch in range(10):\n",
+        "        model.train()\n",
+        "        total_loss = 0\n",
+        "\n",
+        "        for batch_imgs, batch_labels in train_loader:\n",
+        "            batch_imgs, batch_labels = batch_imgs.to(device), batch_labels.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(batch_imgs)\n",
+        "            loss = criterion(outputs, batch_labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            total_loss += loss.item()\n",
+        "\n",
+        "        # Checkpoint saving\n",
+        "        checkpoint_path = os.path.join(checkpoint_dir, f'model_epoch_{epoch}.pth')\n",
+        "        torch.save({\n",
+        "            'epoch': epoch,\n",
+        "            'model_state_dict': model.state_dict(),\n",
+        "            'optimizer_state_dict': optimizer.state_dict(),\n",
+        "            'loss': total_loss/len(train_loader)\n",
+        "        }, checkpoint_path)\n",
+        "\n",
+        "        print(f'Epoch {epoch+1}, Loss: {total_loss/len(train_loader)}, Checkpoint saved')\n",
+        "\n",
+        "    # Evaluation\n",
+        "    model.eval()\n",
+        "    X_test_tensor = X_test.to(device)\n",
+        "    y_test_tensor = y_test.to(device)\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        predictions = model(X_test_tensor)\n",
+        "        _, predicted_classes = torch.max(predictions, 1)\n",
+        "\n",
+        "    # Metrics\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(\n",
+        "        y_test.numpy(),\n",
+        "        predicted_classes.cpu().numpy()\n",
+        "    ))\n",
+        "\n",
+        "    return model\n",
+        "\n",
+        "# Usage\n",
+        "# model = train_and_checkpoint_model(processed_images, processed_labels)"
+      ],
       "metadata": {
         "id": "cSkPhqSz7wNl"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     }
   ]
