--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1509,12 +1509,54 @@
         "    return model\n",
         "\n",
         "# Recommended usage\n",
-        "# model = train_model(processed_images, processed_labels)"
+        "model = train_model(processed_images, processed_labels)"
       ],
       "metadata": {
-        "id": "cSkPhqSz7wNl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cSkPhqSz7wNl",
+        "outputId": "43815364-ca75-4691-b72a-101fb1094d2a"
       },
-      "execution_count": 29,
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1, Loss: nan\n",
+            "Epoch 2, Loss: nan\n",
+            "Epoch 3, Loss: nan\n",
+            "Epoch 4, Loss: nan\n",
+            "Epoch 5, Loss: nan\n",
+            "Epoch 6, Loss: nan\n",
+            "Epoch 7, Loss: nan\n",
+            "Epoch 8, Loss: nan\n",
+            "Epoch 9, Loss: nan\n",
+            "Epoch 10, Loss: nan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.cuda.empty_cache()\n",
+        "torch.backends.cudnn.benchmark = True"
+      ],
+      "metadata": {
+        "id": "lTG2lBgZ_1eF"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TRdpCNkGAFDu"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
