--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1424,26 +1424,31 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "from torch.utils.data import DataLoader, TensorDataset, RandomSampler\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "class LightweightClassifier(nn.Module):\n",
+        "class StableClassifier(nn.Module):\n",
         "    def __init__(self, num_classes=4):\n",
         "        super().__init__()\n",
         "        self.features = nn.Sequential(\n",
-        "            nn.Conv2d(1, 16, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.Conv2d(1, 32, kernel_size=3, padding=1),\n",
+        "            nn.BatchNorm2d(32),\n",
         "            nn.ReLU(),\n",
         "            nn.MaxPool2d(2),\n",
-        "            nn.Conv2d(16, 32, kernel_size=3, stride=1, padding=1),\n",
+        "\n",
+        "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
+        "            nn.BatchNorm2d(64),\n",
         "            nn.ReLU(),\n",
         "            nn.MaxPool2d(2)\n",
         "        )\n",
         "\n",
         "        self.classifier = nn.Sequential(\n",
-        "            nn.Linear(32 * 32 * 32, 256),\n",
+        "            nn.Linear(64 * 32 * 32, 512),\n",
+        "            nn.BatchNorm1d(512),\n",
         "            nn.ReLU(),\n",
-        "            nn.Dropout(0.3),\n",
-        "            nn.Linear(256, num_classes)\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(512, num_classes)\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
@@ -1453,90 +1458,75 @@
         "        return self.classifier(x)\n",
         "\n",
         "def train_model(processed_images, processed_labels):\n",
+        "    # Preprocessing: Normalize images\n",
+        "    scaler = StandardScaler()\n",
+        "    processed_images = scaler.fit_transform(processed_images.reshape(-1, 128*128)).reshape(-1, 128, 128)\n",
+        "\n",
         "    # Split data\n",
         "    X_train, X_test, y_train, y_test = train_test_split(\n",
-        "        processed_images, processed_labels, test_size=0.2, random_state=42\n",
+        "        processed_images, processed_labels, test_size=0.2, random_state=42, stratify=processed_labels\n",
         "    )\n",
         "\n",
-        "    # Convert to tensors with float16 to reduce memory\n",
-        "    X_train = torch.tensor(X_train, dtype=torch.float16)\n",
-        "    X_test = torch.tensor(X_test, dtype=torch.float16)\n",
-        "    y_train = torch.tensor(y_train, dtype=torch.long)\n",
-        "    y_test = torch.tensor(y_test, dtype=torch.long)\n",
+        "    # Convert to tensors\n",
+        "    X_train = torch.FloatTensor(X_train)\n",
+        "    X_test = torch.FloatTensor(X_test)\n",
+        "    y_train = torch.LongTensor(y_train)\n",
+        "    y_test = torch.LongTensor(y_test)\n",
         "\n",
-        "    # Create data loaders with smaller batch size\n",
+        "    # Create datasets\n",
         "    train_dataset = TensorDataset(X_train, y_train)\n",
-        "    train_loader = DataLoader(\n",
-        "        train_dataset,\n",
-        "        batch_size=16,  # Reduced batch size\n",
-        "        sampler=RandomSampler(train_dataset),\n",
-        "        pin_memory=True\n",
-        "    )\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
         "\n",
-        "    # Model setup with memory-efficient configurations\n",
+        "    # Model setup\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "    model = LightweightClassifier().to(device).half()  # Use float16\n",
+        "    model = StableClassifier().to(device)\n",
         "\n",
+        "    # Loss and optimizer with gradient clipping\n",
         "    criterion = nn.CrossEntropyLoss()\n",
-        "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-5)\n",
         "\n",
-        "    # Training loop with gradient accumulation\n",
+        "    # Learning rate scheduler\n",
+        "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience=2, factor=0.5)\n",
+        "\n",
+        "    # Training\n",
         "    model.train()\n",
         "    for epoch in range(10):\n",
         "        total_loss = 0\n",
-        "        optimizer.zero_grad()\n",
+        "        for batch_imgs, batch_labels in train_loader:\n",
+        "            batch_imgs, batch_labels = batch_imgs.to(device), batch_labels.to(device)\n",
         "\n",
-        "        for i, (batch_imgs, batch_labels) in enumerate(train_loader):\n",
-        "            batch_imgs = batch_imgs.to(device).half()\n",
-        "            batch_labels = batch_labels.to(device)\n",
+        "            # Zero gradients\n",
+        "            optimizer.zero_grad()\n",
         "\n",
         "            # Forward pass\n",
         "            outputs = model(batch_imgs)\n",
         "            loss = criterion(outputs, batch_labels)\n",
         "\n",
-        "            # Backward pass with gradient scaling\n",
+        "            # Backward pass with gradient clipping\n",
         "            loss.backward()\n",
+        "            torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1)\n",
         "\n",
-        "            # Update weights every few batches\n",
-        "            if (i + 1) % 4 == 0:\n",
-        "                optimizer.step()\n",
-        "                optimizer.zero_grad()\n",
+        "            # Optimizer step\n",
+        "            optimizer.step()\n",
         "\n",
         "            total_loss += loss.item()\n",
         "\n",
-        "        print(f'Epoch {epoch+1}, Loss: {total_loss/len(train_loader)}')\n",
+        "        # Step the scheduler\n",
+        "        avg_loss = total_loss / len(train_loader)\n",
+        "        scheduler.step(avg_loss)\n",
+        "\n",
+        "        print(f'Epoch {epoch+1}, Loss: {avg_loss:.4f}')\n",
         "\n",
         "    return model\n",
         "\n",
-        "# Recommended usage\n",
-        "model = train_model(processed_images, processed_labels)"
+        "# Usage\n",
+        "# model = train_model(processed_images, processed_labels)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cSkPhqSz7wNl",
-        "outputId": "43815364-ca75-4691-b72a-101fb1094d2a"
+        "id": "cSkPhqSz7wNl"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1, Loss: nan\n",
-            "Epoch 2, Loss: nan\n",
-            "Epoch 3, Loss: nan\n",
-            "Epoch 4, Loss: nan\n",
-            "Epoch 5, Loss: nan\n",
-            "Epoch 6, Loss: nan\n",
-            "Epoch 7, Loss: nan\n",
-            "Epoch 8, Loss: nan\n",
-            "Epoch 9, Loss: nan\n",
-            "Epoch 10, Loss: nan\n"
-          ]
-        }
-      ]
+      "execution_count": 33,
+      "outputs": []
     },
     {
       "cell_type": "code",
