--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -3753,10 +3753,35 @@
         "    main()"
       ],
       "metadata": {
-        "id": "kyOqcyvcWww8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kyOqcyvcWww8",
+        "outputId": "b0c480b1-2e2f-414f-bdeb-75e3f7edc6c5"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5, Loss: 0.5131, Accuracy: 0.7776\n",
+            "Epoch 2/5, Loss: 0.1765, Accuracy: 0.9332\n",
+            "Epoch 3/5, Loss: 0.0985, Accuracy: 0.9652\n",
+            "Epoch 4/5, Loss: 0.0630, Accuracy: 0.9777\n"
+          ]
+        }
+      ]
     }
   ]
 }
