--- a/IDA_DcmToJpeg.ipynb
+++ b/IDA_DcmToJpeg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEjEVV7Q4PsmEYpHd1iXD3",
+      "authorship_tag": "ABX9TyOG4Tq9FgvE+Z+0fH/rv+Ur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "1vuS2HF0WE_t"
+        "id": "1vuS2HF0WE_t",
+        "outputId": "c8db2aa6-5282-4763-b024-d8313853c05f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pydicom\n",
+            "  Downloading pydicom-3.0.1-py3-none-any.whl.metadata (9.4 kB)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.11/dist-packages (11.1.0)\n",
+            "Downloading pydicom-3.0.1-py3-none-any.whl (2.4 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pydicom\n",
+            "Successfully installed pydicom-3.0.1\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install pydicom pillow"
+      ]
     }
   ]
 }
